  in the design document is missing.
- Fixed issue #10782: ConsoleTools: Argument mandatoryness applies always. If
  help option is set, arguments are not checked anymore and old argument
  checking is used, if arguments are disallowed (to assure this is checked
  correctly).
- Fixed issue #10864: ezcConsoleTable calculates wrong column length for
  content including line breaks.


1.3beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9857: Multi-option and default value. Arrays are now allowed in
  default value, if multiple-option is set to true.
- Fixed issue #9902: Problems on Windows.
- Fixed issue #10594: ezcConsole*Options throw incorrect exceptions.
- Fixed issue #10595: ezcConsole*Options perform improper string checks.
- Fixed issue #10596: ezcConsoleTable* classes do not perform proper property
  checks.
- Fixed issue #10604: ezcConsoleInput exception not thrown on invalid option
  string.
- Fixed issue #10608: ezcConsoleInput->registerAlias( ) does not work.
- Fixed issue #10617: ezcConsoleInput->process() bails out incorrectly on
  option exclusion.
- Fixed issue #10619: ezcConsoleOutput __set() broken.
- Fixed issue #10620: ezcConsoleProgressMonitor->__set() issues warning.
- Fixed issue #10624: ezcConsoleStatusbar set access to property $options
  broken.
- Fixed issue #10625: ezcConsoleStatusbar isset access to property $options
  broken.
- Fixed issue #10626: ezcConsoleStatusbar does not trigger warning on invalid
  status.
- Fixed issue #10710: ezcConsoleTable reports fatal error on example
  $table[][0]->content = "foo".
- Implemented issue #8461: Argument help text. A completely new argument
  handling was invented.
- Implemented issue #8471: Disable borders for ezcConsoleTable. Borders can be
  disabled by setting the line and corner properties to null.
- Implemented issue #9216: ezcConsoleInput::getOptionValues I want long names.